objects/TrackerEvents__c.object
<CustomObject>
    <fields>
        <fullName>BrandId__c</fullName>
        <description>BrandId</description>
        <label>BrandId</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerId__c</fullName>
        <description>CustomerId</description>
        <label>CustomerId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>TrackerEvents</relationshipLabel>
        <relationshipName>TrackerEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DataSource__c</fullName>
        <label>DataSource</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventDate__c</fullName>
        <label>EventDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LoyaltyId__c</fullName>
        <description>LoyaltyId</description>
        <label>LoyaltyId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>TrackerEvents</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TrackerEvents</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>